start-microfrontends/k8s/qa/dashboard/dashboard-deployment-qa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modulefederation-dashboard-deployment-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modulefederation-dashboard-qa
  template:
    metadata:
      labels:
        app: modulefederation-dashboard-qa
    spec:
      containers:
      - name: modulefederation-dashboard-deployment-qa
        image: ghcr.io/vucem30/dockerized-modulefederation-dashboard:1.3.75.
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: vucem30registrykey
