start-microfrontends/k8s/qa/dashboard/dashboard-service-qa.yaml
# Expose the deployment using a Service
apiVersion: v1
kind: Service
metadata:
  name: modulefederation-dashboard-service-qa
spec:
  selector:
    app: modulefederation-dashboard-qa
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 80
  type: NodePort
