start-microfrontends/k8s/qa/dashboard/dashboard-ingress-qa.yaml
# Create Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modulefederation-dashboard-ingress-qa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  rules:
  - host: frontqa.v30.cloud-ultrasist.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: modulefederation-dashboard-service-qa
            port:
              number: 4200
  tls:
  - hosts:
    - frontqa.v30.cloud-ultrasist.net
    secretName: v30certs-qa
